<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    tools:context=".profile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profilephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        tools:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sylvester_hillary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cardview_light_background"
        android:padding="9dp"
        android:text="@string/country_nigeria"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:padding="9dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_country"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_country"
        app:layout_constraintTop_toBottomOf="@+id/txt_country" />

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:padding="9dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:padding="9dp"
        android:text="@string/track"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_phone"
        app:layout_constraintTop_toBottomOf="@+id/txt_username2" />

    <TextView
        android:id="@+id/txt_username2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_light_background"
        android:padding="9dp"
        android:text="@string/slack_username"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_phone"
        app:layout_constraintStart_toStartOf="@+id/txt_phone"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>